Index.html and Animation
modified the index.html page as well as cleaned all animations on pages

--- a/StoryPage2_2_2.html
+++ b/StoryPage2_2_2.html
@@ -3,7 +3,7 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html class="animate__animated animate__slideInRight">
+<html class="animate__animated animate__fadeIn">
     <head>
         <title>Kung Fu Journey: Make a move!</title>
         <link rel="stylesheet" href="stylesheet.css">
