--- a/StoryPage3_2_3.html
+++ b/StoryPage3_2_3.html
@@ -3,7 +3,7 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html>
+<html class="animate__animated animate__fadeIn">
     <head>
         <title>Kung Fu Journey: Run or No!</title>
         <link rel="stylesheet" href="stylesheet.css">
@@ -22,7 +22,7 @@
         <h1>Kung Fu Journey</h1>
         <div class="navbar">
           <li><a class="backbutton" href="javascript:history.back()">Go Back</a></li>
-          <li><a class="backbutton" href="StoryPage1.html">Restart Game</a></li>
+          <li><a class="backbutton" href="index.html">Restart Game</a></li>
         </div>
         <div id="background">
             <div id="content">
