--- a/StoryPage5join5_2.html
+++ b/StoryPage5join5_2.html
@@ -22,7 +22,7 @@
         <h1>Kung Fu Journey</h1>
         <div class="navbar">
           <li><a class="backbutton" href="javascript:history.back()">Go Back</a></li>
-          <li><a class="backbutton" href="StoryPage1.html">Restart Game</a></li>
+          <li><a class="backbutton" href="index.html">Restart Game</a></li>
         </div>
         <div id="background">
             <div id="content">
