--- a/index.html
+++ b/index.html
@@ -3,28 +3,32 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html class="animate__animated animate__backInDown">
+<html class="animate__animated animate__fadeIn">
     <head>
-        <title>Kung Fu Journey: Shen's Life</title>
+        <title>Kung Fu Journey: Start Game</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
-            background-image: url("backgrounds/battle.jpg");
+            background-image: url("backgrounds/backgroundswordstand.jpg");
             background-repeat: repeat-y;
             background-size: cover;
             padding: 80px;
             }
+            p{
+              font-size: 30px;
+            }
         </style>
     </head>
     <body>
-        <h1>Kung Fu Journey</h1>
+        <h1 class="animate__animated animate__pulse">Kung Fu Journey</h1>
         <div id="background">
             <div id="content">
-                <h2>Life of Shen</h2>
                 <p>
-                    Welcome to this story of Kung Fu Journey, where you play as Shen.
+                    Not just any story, this a little create your own adventure so you can choose the outcome of the story!
+                    <br><br>
+                    Kung Fu Journey: You play as the protagnist Shen where you get to decide his actions at particular scenarios which ultimately choose Shen's fate.
+                    <br><br><br><br>
                     <a class="options" href="StoryPage1.html">Start Game</a>
                 </p>
             </div>
