--- a/StoryPage1.html
+++ b/StoryPage1.html
@@ -34,5 +34,6 @@
                 </p>
             </div>
         </div>
+        <script src="https://code.responsivevoice.org/responsivevoice.js?key=ZOX0gZg5"></script>
     </body>
 </html>
