Testing added voice API
Testing voice API

--- a/StoryPage3_2_1.html
+++ b/StoryPage3_2_1.html
@@ -47,5 +47,6 @@
             </div>
             <a class="backbutton" href="javascript:history.back()">Go Back</a>
         </div>
+        <script src="https://code.responsivevoice.org/responsivevoice.js?key=ZOX0gZg5"></script>
     </body>
 </html>
