--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
                 </p>
             </div>
         </div>
+        <script src="https://code.responsivevoice.org/responsivevoice.js?key=ZOX0gZg5"></script>
     </body>
 </html>
