--- a/StoryPage1_1.html
+++ b/StoryPage1_1.html
@@ -36,5 +36,6 @@
                 </p>
             </div>
         </div>
+        <script src="https://code.responsivevoice.org/responsivevoice.js?key=ZOX0gZg5"></script>
     </body>
 </html>
