Video and help guide
Includes video to show how to use text to speech in the index.html and along with the video in directory

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <head>
         <title>Kung Fu Journey: Start Game</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
@@ -16,7 +17,7 @@
             padding: 80px;
             }
             p{
-              font-size: 30px;
+              font-size: 20px;
             }
         </style>
     </head>
@@ -28,6 +29,20 @@
                     Not just any story, this a little create your own adventure so you can choose the outcome of the story!
                     <br><br>
                     Kung Fu Journey: You play as the protagnist Shen where you get to decide his actions at particular scenarios which ultimately choose Shen's fate.
+                </p>
+                <br>
+                <h2>Useful feature</h2>
+                <p id="howtotts">
+                    This website is inbuilt with a text to speech feature. To activate please highlight the text you would like to be read out.
+                    <br><br>
+                    You can try it here as well, just highlight this text.
+                    <br><br>
+                    Below video will help you give an idea.
+                    <br><br>
+                    <video width="600" controls>
+                        <source src="howtotts.mp4" type="video/mp4">
+                        Your browser does not support HTML video.
+                    </video>
                     <br><br><br><br>
                     <a class="options" href="StoryPage1.html">Start Game</a>
                 </p>
